--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#4142a1"
-backgroundColor="#fff4f4"
+backgroundColor="#7EC5B5"
 secondaryBackgroundColor="#efbed4"
-textColor="#311a57"
+textColor="#262626"
 font="serif"
